--- a/CruzadaSite/Cruzada/templates/includes/clienteModal.html
+++ b/CruzadaSite/Cruzada/templates/includes/clienteModal.html
@@ -51,10 +51,54 @@
                     </div>
                 </div>
                 <div class="modal-footer text-center">
-                    <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Guardar</button>
+                    <button id="clienteSubmit" type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Guardar</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-minus"></i> Cancelar</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
+<script  type="text/template" class="template">
+    <div class="form-group">
+        <div class="col-sm-4">Nombre:
+        </div>
+        <div class="col-sm-8">
+            <strong><a href="#" data-rel="tooltip" title="Edit customer"><%= nombre %></a></strong>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-4">Apellido:
+        </div>
+        <div class="col-sm-8">
+            <strong><%= apellido %></strong>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-4">DNI:
+        </div>
+        <div class="col-sm-8">
+            <strong><%= dni %></strong>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-4">CUIL:
+        </div>
+        <div class="col-sm-8">
+            <strong><%= cuil %></strong>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-4">Email:
+        </div>
+        <div class="col-sm-8">
+            <strong>email</strong>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-4">Dirección:
+        </div>
+        <div class="col-sm-8">
+            <strong><%= direccion %></strong>
+        </div>
+    </div>
+</script>
