More ventas screen logic.

--- a/CruzadaSite/Cruzada/templates/base.html
+++ b/CruzadaSite/Cruzada/templates/base.html
@@ -17,6 +17,7 @@
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/plugins.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/style.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
     {% if request.session.persona.sucursal_id == 1 %}
     <link href="{{ STATIC_URL }}css/colors/color-dark.css" rel="stylesheet">
     {% elif request.session.persona.sucursal_id == 2  %}
