--- a/CruzadaSite/Cruzada/templates/includes/clienteModal.html
+++ b/CruzadaSite/Cruzada/templates/includes/clienteModal.html
@@ -52,6 +52,7 @@
                 </div>
                 <div class="modal-footer text-center">
                     <button id="clienteSubmit" type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Guardar</button>
+                    <button id="clienteReset" type="reset" class="btn btn-primary" hidden="true"> Limpiar</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-minus"></i> Cancelar</button>
                 </div>
             </form>
