--- a/CruzadaSite/Cruzada/static/css/custom.css
+++ b/CruzadaSite/Cruzada/static/css/custom.css
@@ -1,3 +1,8 @@
 /*------------------------------------------------------------------------------------*/
 /*------------------------------  YOUR CUSTOM CSS STYLE  -----------------------------*/
 
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
